name:                BlogApp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iporsut/codemania110/BlogApp
license:             BSD3
license-file:        LICENSE
author:              Weerasak Chongnguluam
maintainer:          singpor@gmail.com
copyright:           2017 Weerasak Chongnguluam
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable BlogApp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yesod
                     , text
                     , wai
                     , bytestring
                     , time
                     , monad-logger
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , http-types
                     , aeson
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/codemania110

